lab4/jupyterhub-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - jupyter.k8s.labs.itmo.loc
      secretName: k8s-labs-itmo-loc-tls
  rules:
    - host: jupyter.k8s.labs.itmo.loc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
